fix menu bug on mobile when clicking item

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -30,6 +30,7 @@ $nav-color: rgb(18, 25, 38);
   background: none;
   transition: 0.3s;
   color: var(--text-color);
+  z-index: 10;
 
   &:hover {
     border-bottom: solid var(--text-color) 5.5px;
@@ -70,7 +71,7 @@ $nav-color: rgb(18, 25, 38);
     width: 100%;
     height: 100%;
     right: -100%;
-    z-index: 10;
+    z-index: 0;
     transition: 0.3s;
     display: flex;
     justify-content: flex-end;
@@ -91,5 +92,14 @@ $nav-color: rgb(18, 25, 38);
     flex-direction: column;
     position: relative;
     background-color: $nav-color;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 10;
+    transition: 0.3s;
+    
+    &.open {
+      right: 0;
+    }
   }
 }
